--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="template-header">
         <div class="logo">
-          <img style="width: 90px;" src="https://bonnegueule-shop.myshopify.com/cdn/shop/files/Calque_1_280x.svg?v=1713887748">
+          <img style="width: 90px;" src="https://ki1gxq3pd54ke09l-34505719943.shopifypreview.com/cdn/shop/files/Bildschirmfoto_2021-07-02_um_18.13.53.png?v=1627577969&width=140">
         </div>
       </div>
     </header>
@@ -31,7 +31,7 @@
 
     <!-- scripts -->
     
-    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/NDkGqR9CGezeGOkMEMhPROsBnmy4zaGATy3JIS59?languageCode=fr" async></script>    
+    <script src="https://cdn-widgetsrepository.yotpo.com/v1/loader/9UBfoRClXmqBspI2hxNKYC1YYV5mt812snegxY9B?languageCode=en" async></script>    
     <!-- end of scripts -->
   </body>
 </html>
